--- a/Agro-app/CardsSection/CardSection.html
+++ b/Agro-app/CardsSection/CardSection.html
@@ -160,7 +160,7 @@
             </div>
           </div>
           <div class="flex items-center justify-between mt-4">
-            <span class="text-red-500 line-through">₹10,00</span>
+            <span class="text-red-500 line-through">₹10,000</span>
             <span class="text-xl font-bold">₹5999</span>
             <span class="text-sm text-gray-500">per day</span>
           </div>
@@ -206,8 +206,8 @@
     <!-- Contact Section -->
     <div class="flex flex-col items-start">
       <h3 class="text-2xl font-semibold mb-4">CONTACT</h3>
-      <p>Miraj Pandharpur road, Bhose</p>
-      <p>Taluka : Miraj, District : Sangli</p>
+      <p>Mahim Road, Manoor</p>
+      <p>Taluka : Vasai, District : Palghar</p>
       <p class="mt-4 text-green-600">hello@chaloKisan.in</p>
       <p>8767 526 281</p>
       <!-- Social Media Icons -->
