--- a/Agro-app/landingpage/index.html
+++ b/Agro-app/landingpage/index.html
@@ -361,8 +361,8 @@
 
         <div class="flex flex-col items-start">
             <h3 class="text-2xl font-semibold mb-4">CONTACT</h3>
-            <p>Miraj Pandharpur road, Bhose</p>
-            <p>Taluka : Miraj, District : Sangli</p>
+            <p>x</p>
+            <p>Taluka : Vasai, District : Palghar</p>
             <p class="mt-4 text-green-600">hello@chaloKisan.in</p>
             <p>8767 526 281</p>
 
