Initial commit - Added AgroTourism project

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         rel="stylesheet">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <link rel="shortcut icon" href="/Agro-app/images/logo.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="/public/images/logo.jpg" type="image/x-icon">
 
     <style>
         body {
@@ -94,7 +94,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         .bg-pattern {
-            background-image: url('/Agro-app/images/back.jpg');
+            background-image: url('/public/images/back.jpg');
             background-color: #3b4b40;
             background-size: cover;
             background-position: center;
@@ -111,7 +111,7 @@
     <nav id="animated-navbar" class="bg-white shadow-lg animate__animated">
         <div class="container mx-auto px-6 py-3 flex justify-between items-center">
             <div class="flex items-center">
-                <img src="/Agro-app/images/logo.jpg" alt="Logo"
+                <img src="/public/images/logo.jpg" alt="Logo"
                     class="w-10 h-10 mr-3 rounded-full border-2 border-gray-300">
                 <div class="text-xl font-bold text-gray-800">Chalo Kisan</div>
             </div>
@@ -130,13 +130,13 @@
             <div class="hidden md:flex space-x-6">
                 <a href="#"
                     class="text-gray-800 text-xl px-4 py-2 rounded-lg hover:bg-yellow-400 hover:scale-105 hover:text-gray-900 transition-all duration-300 ease-in-out">Home</a>
-                <a href="/Agro-app/Activites/activities.html"
+                <a href="/public/activities.html"
                     class="text-gray-800 text-xl px-4 py-2 rounded-lg hover:bg-yellow-400 hover:scale-105 hover:text-gray-900 transition-all duration-300 ease-in-out">Activities</a>
-                <a href="/Agro-app/CardsSection/CardSection.html"
+                <a href="/public/CardSection.html"
                     class="text-gray-800 text-xl px-4 py-2 rounded-lg hover:bg-yellow-400 hover:scale-105 hover:text-gray-900 transition-all duration-300 ease-in-out">Packages</a>
-                <a href="/Agro-app/LoginSignUp/index.html"
+                <a href="/public/index.html"
                     class="text-gray-800 text-xl px-4 py-2 rounded-lg hover:bg-yellow-400 hover:scale-105 hover:text-gray-900 transition-all duration-300 ease-in-out">Booking</a>
-                <a href="/Agro-app/LoginSignUp/signin.html"
+                <a href="/public/signin.html"
                     class="text-gray-800 text-xl px-4 py-2 rounded-lg hover:bg-yellow-400 hover:scale-105 hover:text-gray-900 transition-all duration-300 ease-in-out">Login</a>
             </div>
         </div>
@@ -145,13 +145,13 @@
             <div class="px-6 py-2 space-y-2 bg-white shadow-lg">
                 <a href="#"
                     class="block text-gray-800 text-xl px-4 py-2 rounded-lg hover:bg-yellow-400 hover:scale-105 hover:text-gray-900 transition-all duration-300 ease-in-out">Home</a>
-                <a href="/Agro-app/Activites/activities.html"
+                <a href="/public/activities.html"
                     class="block text-gray-800 text-xl px-4 py-2 rounded-lg hover:bg-yellow-400 hover:scale-105 hover:text-gray-900 transition-all duration-300 ease-in-out">Activities</a>
-                <a href="/Agro-app/CardsSection/CardSection.html"
+                <a href="/public/CardSection.html"
                     class="block text-gray-800 text-xl px-4 py-2 rounded-lg hover:bg-yellow-400 hover:scale-105 hover:text-gray-900 transition-all duration-300 ease-in-out">Packages</a>
-                <a href="/Agro-app/LoginSignUp/index.html"
+                <a href="/public/index.html"
                     class="block text-gray-800 text-xl px-4 py-2 rounded-lg hover:bg-yellow-400 hover:scale-105 hover:text-gray-900 transition-all duration-300 ease-in-out">Booking</a>
-                <a href="/Agro-app/LoginSignUp/signin.html"
+                <a href="/public/signin.html"
                     class="block text-gray-800 text-xl px-4 py-2 rounded-lg hover:bg-yellow-400 hover:scale-105 hover:text-gray-900 transition-all duration-300 ease-in-out">Login</a>
             </div>
         </div>
@@ -160,7 +160,7 @@
 
 
 <section id="animated-hero" class="relative">
-    <img src="/Agro-app/images/main.jpg" alt="Swimming Pool" class="w-full h-screen object-cover">
+    <img src="/public/images/main.jpg" alt="Swimming Pool" class="w-full h-screen object-cover">
     <div class="absolute inset-0 bg-black bg-opacity-50 flex justify-center items-center">
         <div class="text-center text-white px-4">
             <p class="text-lg uppercase tracking-widest">The Best Agrotourism Farm</p>
@@ -175,11 +175,11 @@
         <div class="flex justify-center items-start lg:w-1/2 mx-auto">
             <!-- Large farm image -->
             <div class="w-full h-96 rounded-lg overflow-hidden">
-                <img src="/Agro-app/images/farm.jpg" alt="Farm View" class="w-full h-full object-cover">
+                <img src="/public/images/farm.jpg" alt="Farm View" class="w-full h-full object-cover">
             </div>
             <!-- Second image positioned to the right -->
             <div class="w-40 h-40 lg:w-64 lg:h-64 rounded-lg overflow-hidden shadow-lg ml-4">
-                <img src="/Agro-app/images/statue.jpg" alt="Statue" class="w-full h-full object-cover">
+                <img src="/public/images/statue.jpg" alt="Statue" class="w-full h-full object-cover">
             </div>
         </div>
 
@@ -193,14 +193,14 @@
             <div class="flex flex-wrap gap-6 justify-center">
                 <div class="flex items-start space-x-2">
                     <div class="brounded-full w-12 h-12 relative overflow-hidden">
-                        <img src="/Agro-app/images/vege.jpg" alt="Icon Description"
+                        <img src="/public/images/vege.jpg" alt="Icon Description"
                             class="absolute inset-0 w-full h-full object-cover">
                     </div>
                     <span class="text-green-700 font-medium">Growing Fruits and Vegetables</span>
                 </div>
                 <div class="flex items-start space-x-2">
                     <div class="rounded-full w-12 h-12 relative overflow-hidden">
-                        <img src="/Agro-app/images/tips.jpg" alt="Icon Description"
+                        <img src="/public/images/tips.jpg" alt="Icon Description"
                             class="absolute inset-0 w-full h-full object-cover">
                     </div>
                     <span class="text-green-700 font-medium">Tips for Ripening your Fruits</span>
@@ -236,13 +236,13 @@
         <!-- Jungle Safari -->
         <div class="text-center">
             <div class="bg-white shadow-lg rounded-full w-64 h-64 mx-auto overflow-hidden">
-                <img src="/Agro-app/images/jungel_safari.jpg" alt="Jungle Safari" class="w-full h-full object-cover">
+                <img src="/public/images/jungel_safari.jpg" alt="Jungle Safari" class="w-full h-full object-cover">
             </div>
             <h2 class="mt-4 text-xl font-semibold text-green-600">Jungle Safari</h2>
         </div>
         <div class="text-center">
             <div class="bg-white shadow-lg rounded-full w-64 h-64 mx-auto overflow-hidden">
-                <img src="/Agro-app/images/trekking.jpg" alt="Trekking" class="w-full h-full object-cover">
+                <img src="/public/images/trekking.jpg" alt="Trekking" class="w-full h-full object-cover">
             </div>
             <h2 class="mt-4 text-xl font-semibold text-green-600">Trekking</h2>
         </div>
@@ -250,7 +250,7 @@
 
         <div class="text-center">
             <div class="bg-white shadow-lg rounded-full w-64 h-64 mx-auto overflow-hidden">
-                <img src="/Agro-app/images/boating.jpg" alt="Boating" class="w-full h-full object-cover">
+                <img src="/public/images/boating.jpg" alt="Boating" class="w-full h-full object-cover">
             </div>
             <h2 class="mt-4 text-xl font-semibold text-green-600">Boating</h2>
         </div>
@@ -258,14 +258,14 @@
 
         <div class="text-center">
             <div class="bg-white shadow-lg rounded-full w-64 h-64 mx-auto overflow-hidden">
-                <img src="/Agro-app/images/accommodation.jpg" alt="Accommodation" class="w-full h-full object-cover">
+                <img src="/public/images/accommodation.jpg" alt="Accommodation" class="w-full h-full object-cover">
             </div>
             <h2 class="mt-4 text-xl font-semibold text-green-600">Accommodation</h2>
         </div>
 
         <div class="text-center">
             <div class="bg-white shadow-lg rounded-full w-64 h-64 mx-auto overflow-hidden">
-                <img src="/Agro-app/images/authentic_food.jpg" alt="Authentic Food" class="w-full h-full object-cover">
+                <img src="/public/images/authentic_food.jpg" alt="Authentic Food" class="w-full h-full object-cover">
             </div>
             <h2 class="mt-4 text-xl font-semibold text-green-600">Authentic Food</h2>
         </div>
@@ -361,8 +361,8 @@
 
         <div class="flex flex-col items-start">
             <h3 class="text-2xl font-semibold mb-4">CONTACT</h3>
-            <p>x</p>
-            <p>Taluka : Vasai, District : Palghar</p>
+            <p>Miraj Pandharpur road, Bhose</p>
+            <p>Taluka : Miraj, District : Sangli</p>
             <p class="mt-4 text-green-600">hello@chaloKisan.in</p>
             <p>8767 526 281</p>
 
