--- a/public/CardSection.html
+++ b/public/CardSection.html
@@ -7,7 +7,8 @@
   <title>Chalo Kisan</title>
   <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Poppins:wght@400;700&display=swap"
         rel="stylesheet">
-  <link rel="shortcut icon" href="/Agro-app/images/logo.jpg" type="image/x-icon">
+  <link rel="shortcut icon" href="/public/images/logo.jpg" type="image/x-icon">
+  <link rel="stylesheet" href="/styles/CardSection.css">
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
   
@@ -35,7 +36,7 @@
   <nav id="animated-navbar" class="bg-white shadow-lg animate__animated">
     <div class="container mx-auto px-6 py-3 flex justify-between items-center">
       <div class="flex items-center">
-        <img src="/Agro-app/images/logo.jpg" alt="Logo"
+        <img src="/public/images/logo.jpg" alt="Logo"
             class="w-10 h-10 mr-3 rounded-full border-2 border-gray-300"> 
         <div class="text-xl font-bold text-gray-800">Chalo Kisan</div>
     </div>
@@ -48,33 +49,33 @@
       </div>
 
       <div class="hidden md:flex space-x-6">
-        <a href="/Agro-app/landingpage/index.html"
+        <a href="/index.html"
           class="text-gray-800 text-xl px-4 py-2 rounded-lg hover:bg-yellow-400 hover:text-gray-900 transition duration-300">Home</a>
-        <a href="/Agro-app/Activites/activities.html"
+        <a href="/public/activities.html"
           class="text-gray-800 text-xl px-4 py-2 rounded-lg hover:bg-yellow-400 hover:text-gray-900 transition duration-300">Activities</a>
-        <a href="/Agro-app/CardsSection/CardSection.html"
+        <a href="/public/CardSection.html"
           class="text-gray-800 text-xl px-4 py-2 rounded-lg hover:bg-yellow-400 hover:text-gray-900 transition duration-300">Packages</a>
-        <a href="/Agro-app/LoginSignUp/index.html"
+        <a href="/public/signup.html"
           class="text-gray-800 text-xl px-4 py-2 rounded-lg hover:bg-yellow-400 hover:text-gray-900 transition duration-300">Booking</a>
-        <a href="/Agro-app/LoginSignUp/signin.html"
+        <a href="/public/signin.html"
           class="text-gray-800 text-xl px-4 py-2 rounded-lg hover:bg-yellow-400 hover:text-gray-900 transition duration-300">Login</a>
       </div>
     </div>
 
     <div id="mobile-menu" class="hidden md:hidden">
       <div class="px-6 py-2 space-y-2 bg-white shadow-lg">
-        <a href="/Agro-app/landingpage/index.html"
+        <a href="/index.html"
           class="block text-gray-800 text-xl px-4 py-2 rounded-lg hover:bg-yellow-400 hover:text-gray-900 transition duration-300">Home</a>
 
-        <a href="/Agro-app/Activites/activities.html"
+        <a href="/public/activities.html"
           class="block text-gray-800 text-xl px-4 py-2 rounded-lg hover:bg-yellow-400 hover:text-gray-900 transition duration-300">Activities</a>
 
-        <a href="/Agro-app/CardsSection/CardSection.html"
+        <a href="/public/CardSection.html"
           class="block text-gray-800 text-xl px-4 py-2 rounded-lg hover:bg-yellow-400 hover:text-gray-900 transition duration-300">Packages</a>
-        <a href="/Agro-app/LoginSignUp/index.html"
+        <a href="/public/index.html"
           class="block text-gray-800 text-xl px-4 py-2 rounded-lg hover:bg-yellow-400 hover:text-gray-900 transition duration-300">Booking</a>
 
-        <a href="/Agro-app/LoginSignUp/signin.html"
+        <a href="/public/signin.html"
           class="text-gray-800 text-xl px-4 py-2 rounded-lg hover:bg-yellow-400 hover:text-gray-900 transition duration-300">Login</a>
       </div>
     </div>
@@ -89,7 +90,7 @@
       <!-- Card 1 -->
       <div class="bg-white shadow-lg rounded-lg overflow-hidden">
         <div class="relative">
-          <img src="/Agro-app/images/Ratnagiri.jpg" alt="Ratnagiri Tour" class="w-full h-48 object-cover">
+          <img src="/public/images/Ratnagiri.jpg" alt="Ratnagiri Tour" class="w-full h-48 object-cover">
           <span class="absolute bottom-2 right-2 bg-black text-white text-xs px-2 py-1 rounded">3N/4D</span>
         </div>
         <div class="p-4">
@@ -117,7 +118,7 @@
       <!-- Card 2 -->
       <div class="bg-white shadow-lg rounded-lg overflow-hidden">
         <div class="relative">
-          <img src="/Agro-app/images/kolhapur.jpg" alt="Kolhapur Tour" class="w-full h-48 object-cover">
+          <img src="/public/images/kolhapur.jpg" alt="Kolhapur Tour" class="w-full h-48 object-cover">
           <span class="absolute bottom-2 right-2 bg-black text-white text-xs px-2 py-1 rounded">4N/5D</span>
         </div>
         <div class="p-4">
@@ -144,7 +145,7 @@
       <!-- Card 3 -->
       <div class="bg-white shadow-lg rounded-lg overflow-hidden">
         <div class="relative">
-          <img src="/Agro-app/images/Raigad.jpg" alt="Raigad Tour" class="w-full h-48 object-cover">
+          <img src="/public/images/Raigad.jpg" alt="Raigad Tour" class="w-full h-48 object-cover">
           <span class="absolute bottom-2 right-2 bg-black text-white text-xs px-2 py-1 rounded">1N/2D</span>
         </div>
         <div class="p-4">
