--- a/public/activities.html
+++ b/public/activities.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chalo Kisan</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="shortcut icon" href="/Agro-app/images/logo.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="/public/images/logo.jpg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 
     <!-- Google Fonts for Typography -->
@@ -58,7 +58,7 @@
     <nav id="animated-navbar" class="bg-white shadow-lg animate__animated"></nav>
     <div class="container mx-auto px-6 py-3 flex justify-between items-center">
         <div class="flex items-center">
-            <img src="/Agro-app/images/logo.jpg" alt="Logo"
+            <img src="/public/images/logo.jpg" alt="Logo"
                 class="w-10 h-10 mr-3 rounded-full border-2 border-gray-300">
             <div class="text-xl font-bold text-gray-800">Chalo Kisan</div>
         </div>
@@ -73,30 +73,30 @@
         </div>
 
         <div class="hidden md:flex space-x-6">
-            <a href="/Agro-app/landingpage/index.html"
+            <a href="/index.html"
                 class="text-gray-800 text-xl px-4 py-2 rounded-lg hover:bg-yellow-400 hover:text-gray-900 transition duration-300">Home</a>
-            <a href="/Agro-app/Activites/activities.html"
+            <a href="/public/activities.html"
                 class="text-gray-800 text-xl px-4 py-2 rounded-lg hover:bg-yellow-400 hover:text-gray-900 transition duration-300">Activities</a>
-            <a href="/Agro-app/CardsSection/CardSection.html"
+            <a href="/public/CardSection.html"
                 class="text-gray-800 text-xl px-4 py-2 rounded-lg hover:bg-yellow-400 hover:text-gray-900 transition duration-300">Packages</a>
-            <a href="/Agro-app/LoginSignUp/index.html"
+            <a href="/public/index.html"
                 class="text-gray-800 text-xl px-4 py-2 rounded-lg hover:bg-yellow-400 hover:text-gray-900 transition duration-300">Booking</a>
-            <a href="/Agro-app/LoginSignUp/signin.html"
+            <a href="/public/signin.html"
                 class="text-gray-800 text-xl px-4 py-2 rounded-lg hover:bg-yellow-400 hover:text-gray-900 transition duration-300">Login</a>
         </div>
     </div>
 
     <div id="mobile-menu" class="hidden md:hidden">
         <div class="px-6 py-2 space-y-2 bg-white shadow-lg">
-            <a href="/Agro-app/landingpage/index.html"
+            <a href="/index.html"
                 class="block text-gray-800 text-xl px-4 py-2 rounded-lg hover:bg-yellow-400 hover:text-gray-900 transition duration-300">Home</a>
-            <a href="/Agro-app/Activites/activities.html"
+            <a href="/public/activities.html"
                 class="block text-gray-800 text-xl px-4 py-2 rounded-lg hover:bg-yellow-400 hover:text-gray-900 transition duration-300">Activities</a>
-            <a href="/Agro-app/CardsSection/CardSection.html"
+            <a href="/public/CardSection.html"
                 class="block text-gray-800 text-xl px-4 py-2 rounded-lg hover:bg-yellow-400 hover:text-gray-900 transition duration-300">Packages</a>
-            <a href="/Agro-app/LoginSignUp/index.html"
+            <a href="/public/index.html"
                 class="block text-gray-800 text-xl px-4 py-2 rounded-lg hover:bg-yellow-400 hover:text-gray-900 transition duration-300">Booking</a>
-            <a href="/Agro-app/LoginSignUp/signin.html"
+            <a href="/public/signin.html"
                 class="text-gray-800 text-xl px-4 py-2 rounded-lg hover:bg-yellow-400 hover:text-gray-900 transition duration-300">Login</a>
         </div>
     </div>
@@ -113,7 +113,7 @@
             <!-- Jungle Safari -->
             <div class="text-center">
                 <div class="bg-white shadow-lg rounded-full w-64 h-64 mx-auto overflow-hidden">
-                    <img src="/Agro-app/images/jungel_safari.jpg" alt="Jungle Safari"
+                    <img src="/public/images/jungel_safari.jpg" alt="Jungle Safari"
                         class="w-full h-full object-cover">
                 </div>
                 <h2 class="mt-4 text-xl font-semibold text-green-600">Jungle Safari</h2>
@@ -121,35 +121,35 @@
 
             <div class="text-center">
                 <div class="bg-white shadow-lg rounded-full w-64 h-64 mx-auto overflow-hidden">
-                    <img src="/Agro-app/images/trekking.jpg" alt="Trekking" class="w-full h-full object-cover">
+                    <img src="/public/images/trekking.jpg" alt="Trekking" class="w-full h-full object-cover">
                 </div>
                 <h2 class="mt-4 text-xl font-semibold text-green-600">Trekking</h2>
             </div>
 
             <div class="text-center">
                 <div class="bg-white shadow-lg rounded-full w-64 h-64 mx-auto overflow-hidden">
-                    <img src="/Agro-app/images/swimming.jpg" alt="Swimming" class="w-full h-full object-cover">
+                    <img src="/public/images/swimming.jpg" alt="Swimming" class="w-full h-full object-cover">
                 </div>
                 <h2 class="mt-4 text-xl font-semibold text-green-600">Swimming</h2>
             </div>
 
             <div class="text-center">
                 <div class="bg-white shadow-lg rounded-full w-64 h-64 mx-auto overflow-hidden">
-                    <img src="/Agro-app/images/boating.jpg" alt="Boating" class="w-full h-full object-cover">
+                    <img src="/public/images/boating.jpg" alt="Boating" class="w-full h-full object-cover">
                 </div>
                 <h2 class="mt-4 text-xl font-semibold text-green-600">Boating</h2>
             </div>
 
             <div class="text-center">
                 <div class="bg-white shadow-lg rounded-full w-64 h-64 mx-auto overflow-hidden">
-                    <img src="/Agro-app/images/school_trips.jpg" alt="School Trips" class="w-full h-full object-cover">
+                    <img src="/public/images/school_trips.jpg" alt="School Trips" class="w-full h-full object-cover">
                 </div>
                 <h2 class="mt-4 text-xl font-semibold text-green-600">School Trips</h2>
             </div>
 
             <div class="text-center">
                 <div class="bg-white shadow-lg rounded-full w-64 h-64 mx-auto overflow-hidden">
-                    <img src="/Agro-app/images/bird_watching.jpg" alt="Bird Watching"
+                    <img src="/public/images/bird_watching.jpg" alt="Bird Watching"
                         class="w-full h-full object-cover">
                 </div>
                 <h2 class="mt-4 text-xl font-semibold text-green-600">Bird Watching</h2>
@@ -157,7 +157,7 @@
 
             <div class="text-center">
                 <div class="bg-white shadow-lg rounded-full w-64 h-64 mx-auto overflow-hidden">
-                    <img src="/Agro-app/images/accommodation.jpg" alt="Accommodation"
+                    <img src="/public/images/accommodation.jpg" alt="Accommodation"
                         class="w-full h-full object-cover">
                 </div>
                 <h2 class="mt-4 text-xl font-semibold text-green-600">Accommodation</h2>
@@ -165,7 +165,7 @@
 
             <div class="text-center">
                 <div class="bg-white shadow-lg rounded-full w-64 h-64 mx-auto overflow-hidden">
-                    <img src="/Agro-app/images/authentic_food.jpg" alt="Authentic Food"
+                    <img src="/public/images/authentic_food.jpg" alt="Authentic Food"
                         class="w-full h-full object-cover">
                 </div>
                 <h2 class="mt-4 text-xl font-semibold text-green-600">Authentic Food</h2>
@@ -173,7 +173,7 @@
 
             <div class="text-center">
                 <div class="bg-white shadow-lg rounded-full w-64 h-64 mx-auto overflow-hidden">
-                    <img src="/Agro-app/images/birthday_party.jpg" alt="Birthday Party"
+                    <img src="/public/images/birthday_party.jpg" alt="Birthday Party"
                         class="w-full h-full object-cover">
                 </div>
                 <h2 class="mt-4 text-xl font-semibold text-green-600">Birthday Party</h2>
