--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chalo Kisan Booking</title>
+  <title>Chalo Kisan</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="shortcut icon" href="/Agro-app/images/logo.jpg" type="image/x-icon">
+  <link rel="shortcut icon" href="/public/images/logo.jpg" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Poppins:wght@400;700&display=swap"
         rel="stylesheet">
 
@@ -180,11 +180,11 @@
 
       <!-- Menu Links with hover effect same as Marathi button -->
       <div class="hidden md:flex space-x-6">
-        <a href="/Agro-app/landingpage/index.html"
+        <a href="/index.html"
           class="text-gray-800 text-xl px-4 py-2 rounded-lg hover:bg-yellow-400 hover:text-gray-900 transition duration-300">Home</a>
-        <a href="/Agro-app/Activites/activities.html"
+        <a href="/public/activities.html"
           class="text-gray-800 text-xl px-4 py-2 rounded-lg hover:bg-yellow-400 hover:text-gray-900 transition duration-300">Activities</a>
-        <a href="/Agro-app/CardsSection/CardSection.html"
+        <a href="/public/CardSection.html"
           class="text-gray-800 text-xl px-4 py-2 rounded-lg hover:bg-yellow-400 hover:text-gray-900 transition duration-300">Packages</a>
 
       </div>
@@ -193,11 +193,11 @@
     <!-- Mobile Menu (hidden by default) -->
     <div id="mobile-menu" class="hidden md:hidden">
       <div class="px-6 py-2 space-y-2 bg-white shadow-lg">
-        <a href="/Agro-app/landingpage/index.html"
+        <a href="/index.html"
           class="block text-gray-800 text-xl px-4 py-2 rounded-lg hover:bg-yellow-400 hover:text-gray-900 transition duration-300">Home</a>
-        <a href="/Agro-app/Activites/activities.html"
+        <a href="/public/activities.html"
           class="block text-gray-800 text-xl px-4 py-2 rounded-lg hover:bg-yellow-400 hover:text-gray-900 transition duration-300">Activities</a>
-        <a href="/Agro-app/CardsSection/CardSection.html"
+        <a href="/public/CardSection.html"
           class="block text-gray-800 text-xl px-4 py-2 rounded-lg hover:bg-yellow-400 hover:text-gray-900 transition duration-300">Packages</a>
         
       </div>
