--- a/public/signin.html
+++ b/public/signin.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sign In</title>
+  <title>Chalo Kisan</title>
+  <link rel="shortcut icon" href="/public/images/logo.jpg" type="image/x-icon">
   <script src="https://cdn.tailwindcss.com"></script>
   <script type="module">
     // Firebase configuration
@@ -69,7 +70,7 @@
     </form>
     <p class="mt-4 text-center text-gray-600">
       Don't have an account? 
-      <a href="./signup.html" class="text-yellow-500 font-semibold">Create an Account</a>
+      <a href="/public/signup.html" class="text-yellow-500 font-semibold">Create an Account</a>
     </p>
   </div>
 </body>
