--- a/public/signup.html
+++ b/public/signup.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sign Up</title>
+  <title>Chalo Kisan</title>
+  <link rel="shortcut icon" href="/public/images/logo.jpg" type="image/x-icon">
+
   <script src="https://cdn.tailwindcss.com"></script>
   <!-- Include Firebase SDKs via CDN -->
   <script type="module">
@@ -92,7 +94,7 @@
     </form>
     <p class="mt-4 text-center text-gray-600">
       Already have an account? 
-      <a href="signin.html" class="text-yellow-500 font-semibold">Go to Sign In</a>
+      <a href="/public/signin.html" class="text-yellow-500 font-semibold">Go to Sign In</a>
     </p>
   </div>
 </body>
